basic example (dark background)

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 	<title>Utility-First Methodology</title>
 
 	<link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
+	<link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-	<section class="mw6 ma3 pa3 shadow-1">
+	<section class="mw6 ma3 pa3 shadow-1 bg-gray-blue white">
 		<h1 class="sans-serif">Card Title</h1>
 		<p class="serif">
 			I am a very simple card. I am good at containing small bits of 
