--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 	<link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-	<section class="mw6 ma3 pa3 shadow-1 bg-gray-blue white">
-		<h1 class="sans-serif">Card Title</h1>
-		<p class="serif">
+	<section class="mw6 ma3 shadow-1 bg-gray-blue white flex flex-column">
+		<h1 class="sans-serif ma3">Card Title</h1>
+		<p class="serif ma3">
 			I am a very simple card. I am good at containing small bits of 
 			information. I am convenient because I require little markup to 
 			use effectively.
 		</p>
+		<div class="links bt .b--white">
+			<a href="#">This is a link</a>
+			<a href="#">This is a link</a>
+		</div>
 	</section>
 </body>
 </html>
