With image and title above image

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 	<link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-	<section class="mw6 ma3 shadow-1 bg-gray-blue white flex flex-column">
-		<h1 class="sans-serif ma3">Card Title</h1>
+	<section class="mw6 ma3 shadow-1 flex flex-column">
+		<div class="titleContainer h5 relative">
+			<h1 class="sans-serif ma3 absolute bottom-0 white">Card Title</h1>
+		</div>
 		<p class="serif ma3">
 			I am a very simple card. I am good at containing small bits of 
 			information. I am convenient because I require little markup to 
 			use effectively.
 		</p>
-		<div class="links bt .b--white">
-			<a href="#">This is a link</a>
+		<div class="links bt">
 			<a href="#">This is a link</a>
 		</div>
 	</section>
