--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 	<link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-	<section class="mw6 ma3 shadow-1 flex flex-column">
+	<section class="mw6 ma3 shadow-1 flex flex-column relative">
 		<div class="titleContainer h5 relative">
 			<h1 class="sans-serif ma3 absolute bottom-0 white">Card Title</h1>
+			<button class="w2 h2 bg-red br-100 bn white absolute bottom--1 right-1">+</button>
 		</div>
 		<p class="serif ma3">
 			I am a very simple card. I am good at containing small bits of 
 			information. I am convenient because I require little markup to 
 			use effectively.
 		</p>
-		<div class="links bt">
+		<div class="links bt gray">
 			<a href="#">This is a link</a>
 		</div>
 	</section>
