with reveal button and after reveal

--- a/index.html
+++ b/index.html
@@ -12,17 +12,12 @@
 <body>
 	<section class="mw6 ma3 shadow-1 flex flex-column relative">
 		<div class="titleContainer h5 relative">
-			<h1 class="sans-serif ma3 absolute bottom-0 white">Card Title</h1>
-			<button class="w3 h3 bg-red br-100 bn white absolute bottom--2 right-2">+</button>
 		</div>
-		<p class="serif ma3">
-			I am a very simple card. I am good at containing small bits of 
-			information. I am convenient because I require little markup to 
-			use effectively.
-		</p>
-		<div class="links bt gray">
-			<a href="#">This is a link</a>
+		<div class="heading flex justify-between">
+			<h1 class="sans-serif ma3 mb0">Card Title</h1>
+			<button class="ma3 bg-white bn">...</button>
 		</div>
+		<a href="#" class="ma3 no-underline">This is a link</a>
 	</section>
 </body>
 </html>
